--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,6 @@
     <title>Cameron Jones Web Design</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script src="app.js"></script>
+    <div id="app"></div>
   </body>
 </html>
