--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="shortcut icon" type="image/x-icon" width="32px" href="/assets/favicon-site.ico"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon-site.ico"/>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Cameron Jones Web Design</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script src="bundle.js"></script>
+    <div id="app"></div>
   <script type="text/javascript" src="/app.js"></script></body>
 </html>
